# SmallptGPU

./: ApplicationData.c  ApplicationData.h  ApplicationData.hpp  CLContext.c  CLContext.h  CLContext.hh  CLUtilities.c  CLUtilities.h  CLUtilities.hh  CMakeLists.txt  Camera.hh  Defines.hh  Externs.hpp  GLContext.c  GLContext.h  GLKeyboard.c  GLKeyboardDefines.hh  GLUtilities.c  Light.hpp  Math.hh  MonteCarlo.hpp  Profiler.c  Profiler.h  Ray.hh  SceneReader.c  SceneReader.h  Sphere.hh  Typedefs.hh  Vector2.hh  Vector3.hh  Vector4.hh  contributors.txt  displayfunc.c  geom.h  geomfunc.h  rendering_kernel.cl  scene.h  smallptCPU.c  smallptGPU.c  vec.h
cmake/: FindGLEW.cmake  FindGLUT.cmake  FindOpenGL.cmake
scenes/: cornell.scn
